Count clicked mosquitos, closes #9 and #6

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ h2 {
 }
 
 .mosquito-img {
+  cursor: pointer;
   background-image: url(../src/images/mosquito.png);
   width: 100px;
   height: 100px;
